# src/routes/user-route.js
@@ -5,9 +5,6 @@ const router = express.Router();
 const controller = require('../controllers/user-controller');
 const authService = require('../auth/auth-service');
 
-router.post('/login', controller.login);
-router.post('/refresh-login', authService.authorize, controller.refreshLogin);
-
 router.get('/', authService.authorize, controller.find);
 router.post('/', authService.authorize, controller.create);
 router.put('/:id', authService.authorize, controller.update);
